testing strategy updates.. refactored locations of projects to make more sense.. still 2 more to move